Bug 726258 - Don't suppress the scrollbar because of a too small size in the scollbar minor direction.  r=bz